sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:7: error: illegal start of simple expression
  while (cpt1 != 0 || cpt2 != 0)) {
                                ^